🧐 css fixed - people pick (flex wrap)

--- a/pages/peoplePick/peoplePick.module.css
+++ b/pages/peoplePick/peoplePick.module.css
@@ -89,8 +89,10 @@
 }
 .detailsSub {
   display: flex;
+  flex-wrap: wrap;
   margin-left: 38px;
-  margin-top: 13px;
+  margin-top: 9px;
+  max-width: 400px;
 }
 .detailsLeft {
   position: relative;
@@ -158,4 +160,5 @@
   margin-right: 5px;
   padding-left: 5px;
   padding-right: 5px;
+  margin-top: 4px;
 }
